--- a/index.html
+++ b/index.html
@@ -193,7 +193,6 @@
                 });
               }
             });
-
             aboutPhoto.addEventListener('mouseleave', () => {
               if (cursorEffect) {
                 cursorEffect.destroy(); 
@@ -507,7 +506,7 @@
             <div>
               <p>Powered by</p>
               <img
-                src="assets/icons/key.png"
+                src="assets/icons/github1.png"
                 alt="dedsec"
                 width="60px"
                 height="60px"
