--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                   width="100px"
                   height="100px"
                   alt="dedsec"
+                  class="skills-icons"
                 />
               </div>
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Building hacking tool<span>//</span></h3>
@@ -366,6 +367,7 @@
                   width="100px"
                   height="100px"
                   alt="dedsec"
+                  class="skills-icons"
                 />
               </div>
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Building Malware<span>//</span> </h3>
@@ -380,6 +382,7 @@
                   width="100px"
                   height="100px"
                   alt="ícone imagem"
+                  class="skills-icons"
                 />
               </div>
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 30px;"><span>//</span>Making Content<span>//</span></h3>
@@ -431,7 +434,7 @@
               <article class="icon4 intervalCardReveal">
                 <span class="skills-cards-name-high">Maltego</span>
                 <img
-                  src="assets/icons/maltego.webp"
+                  src="assets/icons/maltego.png"
                   width="60px"
                   height="60px"
                   alt="dedsec"
