--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             <div class="line3"></div>
           </div>
           <ul class="nav-list">
-            <li><a href="#s-home" style="color: rgb(220, 220, 220); font-family: 'Rajdhani',  sans-serif;">HOME<span>/</span></a></li>
-            <li><a href="#s-about" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">ABOUT<span>/</span></a></li>
-            <li><a href="#s-projects" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">PROJECT<span>/</span></a></li>
-            <li><a href="#s-services" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">WHAT I DO<span>/</span></a></li>
-            <li><a href="#s-skills" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">SKILLS<span>/</span></a></li>
+            <li><a href="#s-home" style="color: rgb(220, 220, 220); font-family: 'Rajdhani',  sans-serif;">HOME<span>*</span></a></li>
+            <li><a href="#s-about" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">ABOUT<span>*</span></a></li>
+            <li><a href="#s-projects" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">PROJECT<span>*</span></a></li>
+            <li><a href="#s-services" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">WHAT I DO<span>*</span></a></li>
+            <li><a href="#s-skills" style="color: rgb(220, 220, 220); font-family: 'Rajdhani', sans-serif;">SKILLS<span>*</span></a></li>
           </ul>
         </nav>
       </div>
@@ -134,9 +134,9 @@
             <div id="home-container-text">
               <h1 class="delayMediumReveal">
                 <span style="color: white; font-family: 'LiveOverfont', sans-serif;
-                ">root@</span><span style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif;"
+                ">root@</span><span style="color: #8778c1; font-family: 'LiveOverfont', sans-serif;"
                 >0xbit</span><span style="color: white; font-family: 'LiveOverfont', sans-serif;"
-                >></span><span style="color: red; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;"
+                >></span><span style="color: #8778c1; animation: blink 1s infinite; font-family: 'LiveOverfont', sans-serif;"
                 >_</span>
                 <div class="gg" title="404" style="color: white; font-family: 'LiveOverfont', sans-serif;">I create tools for Linux-based systems.</div>
               </h1>
@@ -254,11 +254,11 @@
               </div>
             </div>
             <article id="about-text">
-              <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64); font-family: 'LiveOverfont', sans-serif; font-size: 40px;">
+              <h2 class="delaySmallReveal" style="color: #8778c1; font-family: 'LiveOverfont', sans-serif; font-size: 40px;">
                 tibx0[::-1]
               </h2>
               <p class="delayMediumReveal" style="color: white; font-family: 'LiveOverfont', sans-serif; font-size: 27px;">
-                I’m a 21-year-old developer who loves building hacking tools, especially for Linux systems. My work involves creating and improving command-line tools, and I spend a lot of time exploring the details of cybersecurity. I’m really drawn to the challenge of developing advanced tools, particularly ones that test system weaknesses or use creative, off-the-beaten-path hacking methods. It’s a field that keeps me on my toes, always learning and trying to push boundaries.
+              Passionate Linux tool developer with a focus on offensive security and creative penetration testing utilities. I build CLI-based hacking tools to challenge conventional security assumptions and explore unconventional attack vectors. Constantly evolving in the dynamic world of cybersecurity.
               </p>
             </article>
           </div>
@@ -266,7 +266,7 @@
       </section>
       <section id="s-experience">
         <div class="grid-layout">
-          <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif;"><span>/</span>Experience<span>/</span></h2>
+          <h2 class="delaySmallReveal" style="color: #8778c1 'LiveOverfont', sans-serif;"><span>#</span>Experience</h2>
           <div id="experience">
             <div
               class="option-experience intervalCardReveal"
@@ -274,8 +274,8 @@
               <div class="company iot activeExperience">
                 <h3><span>/</span>IoT</h3>
               </div>
-              <div class="company kernel">
-                <h3><span>/</span>linux kernel </h3>
+              <div class="company linux">
+                <h3><span>/</span>linux system</h3>
               </div>
               <div class="company os">
                 <h3><span>/</span>windows os</h3>
@@ -286,12 +286,12 @@
             </div>
             <div class="text-experience intervalCardReveal">
               <div>
-                <h4 class="titleExperience"> IoT project </h4>
+                <h4 class="titleExperience">IoT Project</h4>
                 <p class="dateExperience">Jan 2019 - Jan 2025 </p>
               </div>
-              <h5 class="companyExperience">Building hacking device</h5>
+              <h5 class="companyExperience">Building hacking devices</h5>
               <p class="changeExperience">
-                I’ve spent a lot of time working in IoT hacking, focusing on creating clever solutions for connected devices. Whether it’s figuring out how to secure these systems or exploring the complexities of smart technology, I’m passionate about ethical hacking and the ever-changing world of IoT.
+                My focus is on offensive security hardware. I design and build devices based on microcontrollers (like the ESP32) for penetration testing and RF analysis. This includes developing WiFi deauthentication tools, RF jammers, and other custom gear for assessing the security of wireless and IoT systems. I'm passionate about creating tangible solutions that demonstrate real-world vulnerabilities.
               </p>
             </div>
           </div>
@@ -299,10 +299,10 @@
       </section>
       <section id="s-projects">
         <div class="grid-layout">
-          <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 40px;">Project<span>$</span></h2>
+          <h2 class="delaySmallReveal" style="color: rgb(97, 53, 243) 'LiveOverfont', sans-serif; font-size: 40px;">Project<span>$</span></h2>
           <div id="projects">
             <article class="layout">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>DEDSEC_RANSOMWARE<span>/</span></h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>dedsec_ransomware<span>/</span></h3>
               <p>
                 Linux based ransomware tool that can create a ransomware code with discord integration.
               </p>
@@ -314,7 +314,7 @@
               </a>
             </article>
             <article class="layout">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>DEDSEC_BLUEJACKER<span>/</span></h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>dedsec_bluejacker<span>/</span></h3>
               <p>
                 Bluetooth jamming device/tool that uses an ESP32 NodeMCU and an nRF module.  
               </p>
@@ -326,7 +326,7 @@
               </a>
             </article>
             <article class="layout">
-              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>DEDSEC_PTZ_EXPLOIT<span>/</span></h3>
+              <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>dedsec_ptz_exploit<span>/</span></h3>
               <p>
                 IP Camera exploit to control ip camera movement (PTZ) even without a username and password.
               </p>
@@ -338,11 +338,11 @@
               </a>
             </article>
           </div>
-          <a href="https://github.com/0xbitx?tab=repositories" rel="noopener" target="_blank" class="delaySmallReveal" style="color: rgb(212, 64, 64) 'Rajdhani'; font-size: 25px;"><span><</span> Repositories on GitHub <span>></span></a>      </div>
+          <a href="https://github.com/0xbitx?tab=repositories" rel="noopener" target="_blank" class="delaySmallReveal" style="color: rgb(97, 53, 243) 'Rajdhani'; font-size: 25px;"><span><</span> Repositories on GitHub <span>></span></a>      </div>
       </section>
       <section id="s-services">
         <div class="grid-layout">
-          <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 40px;">What I do<span>.</span></h2>
+          <h2 class="delaySmallReveal" style="color: rgb(97, 53, 243) 'LiveOverfont', sans-serif; font-size: 40px;">What I do<span>.</span></h2>
           <div id="services">
             <article class="intervalCardReveal">
               <div>
@@ -397,7 +397,7 @@
         <div class="grid-layout">
           <div id="skills">
             <article id="skills-text">
-              <h2 class="delaySmallReveal" style="color: rgb(212, 64, 64) 'LiveOverfont', sans-serif; font-size: 38px;">language and tool | skill<span>$</span></h2>
+              <h2 class="delaySmallReveal" style="color: rgb(97, 53, 243) 'LiveOverfont', sans-serif; font-size: 38px;"><span>#</span>language and tool | skill<span>$</span></h2>
               <p class="delayMediumReveal changeDescription"><span>//</span>languages | tools<span>></span></p>
             </article>
             <div id="skills-cards">
