--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
               <article class="layout">
               <h3 style="color: rgb(199, 199, 199); font-family: 'LiveOverfont', sans-serif; font-size: 28px;"><span>/root/</span>dedsec_botnet<span>/</span></h3>
               <p>
-                Linux-based botnet builder designed for creating advanced botnet payloads.c
+                Linux-based botnet builder designed for creating advanced botnet payloads.
               </p>
               <a
                 href="https://github.com/0xbitx/DEDSEC_BOTNET"
